--- a/app/src/main/res/layout/fragment_status_qurban.xml
+++ b/app/src/main/res/layout/fragment_status_qurban.xml
@@ -1,14 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:padding="24sp"
     tools:context=".ui.detail.StatusQurbanFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tv_headline_organizer"
+        style="@style/TextBody.Medium.HeadlineSmall"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Qurban Masjid Baba Alun" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_address"
+        style="@style/TextBody"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_headline_organizer"
+        tools:text="Qurban Masjid Baba Alun" />
+
+
+    <ImageView
+        android:id="@+id/iv_event_organizer"
+        android:layout_width="match_parent"
+        android:layout_height="175dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/bg_rounded_8dp"
+        android:clipToOutline="true"
+        android:maxHeight="175dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/dummy_mosque"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_address" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/tv_execution_label"
+        style="@style/TextBody.Medium.BodyLarge"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_event_organizer"
+        android:text="@string/execution"/>
+
+    <TextView
+        android:id="@+id/tv_execution"
+        style="@style/TextBody.BodyLarge"
+        android:textColor="@color/grey_40"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_execution_label"
+        android:text="@string/execution"/>
+
+
+
+
+    <TextView
+        android:id="@+id/tv_deliver_label"
+        style="@style/TextBody.Medium.BodyLarge"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/iv_event_organizer"
+        android:text="@string/deliver"/>
+
+    <TextView
+        android:id="@+id/tv_deliver"
+        style="@style/TextBody.BodyLarge"
+        android:textColor="@color/grey_40"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/tv_execution_label"
+        android:text="@string/execution"/>
+    <TextView
+        android:id="@+id/tv_status_qurban"
+        style="@style/TextBody.Medium.BodyLarge"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_execution"
+        android:text="@string/status_qurban"/>
+
+    <TextView
+        android:id="@+id/tv_status_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextBody.Medium"
+        android:textSize="12sp"
+        android:padding="12dp"
+        android:layout_marginTop="12dp"
+        android:text="Belum Melakukan Pembayaran"
+        android:background="@drawable/bg_rounded_8dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/yellow"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_status_qurban"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Button"
+        android:text="@string/text_lets_pay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_status_container"
+        app:layout_constraintBottom_toBottomOf="@id/tv_status_container"/>
+
+    <TextView
+        android:id="@+id/tv_caution_to_pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextBody.Italic"
+        android:textSize="12sp"
+        android:layout_marginTop="12dp"
+        android:text="Mohon melakukan pembayaran sebelum "
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_status_container"
+        />
+
+    <TextView
+        android:id="@+id/tv_caution_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextBody.Italic"
+        android:textSize="12sp"
+        android:textColor="@color/red"
+        android:text="06:10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_caution_to_pay"
+        app:layout_constraintBottom_toBottomOf="@id/tv_caution_to_pay"
+        />
+    <TextView
+        android:id="@+id/tv_registration_label"
+        style="@style/TextBody.Medium.BodyLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_caution_to_pay"
+        android:text="@string/stock"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:listitem="@layout/item_stock_qurban"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_registration_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/Button"
+        android:text="@string/register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
