--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,39 +3,54 @@
     <style name="Base.Theme.QurbanIn" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:textColorPrimary">?android:textColorTertiary</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
+    <style name="Theme.QurbanIn" parent="Base.Theme.QurbanIn"/>
 
-    <style name="TextBody" parent="TextAppearance.AppCompat">
-        <item name="fontFamily">@font/roboto_regular</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-    <style name="TextBody.Light" parent="TextBody">
-        <item name="fontFamily">@font/roboto_light</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-    <style name="TextBody.LightItalic" parent="TextBody">
-        <item name="fontFamily">@font/roboto_light_italic</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-    <style name="TextBody.Medium" parent="TextBody">
-        <item name="fontFamily">@font/roboto_medium</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-    <style name="TextBody.Bold" parent="TextBody">
-        <item name="fontFamily">@font/roboto_bold</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
+<!--    <style name="TextBody" parent="Theme.QurbanIn">-->
+<!--        <item name="fontFamily">@font/roboto_regular</item>-->
+<!--        <item name="android:textColor">@color/black</item>-->
+<!--        <item name="android:textSize">14sp</item>-->
+<!--    </style>-->
+<!--    <style name="TextBody.BodyLarge" parent="TextBody">-->
+<!--        <item name="android:textSize">16sp</item>-->
+<!--    </style>-->
 
-    <style name="Button" parent="Widget.Material3.Button">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/roboto_medium</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="cornerRadius">8dp</item>
-        <item name="android:paddingTop">8dp</item>
-        <item name="android:paddingBottom">8dp</item>
-        <item name="android:backgroundTint">@color/green_40</item>
-    </style>
+<!--    <style name="TextBody.Italic" parent="TextBody">-->
+<!--        <item name="fontFamily">@font/roboto_italic</item>-->
+<!--        <item name="android:textColor">@color/black</item>-->
+<!--    </style>-->
+<!--    <style name="TextBody.Medium" parent="TextBody">-->
+<!--        <item name="fontFamily">@font/roboto_medium</item>-->
+<!--        <item name="android:textColor">@color/black</item>-->
+<!--    </style>-->
+
+<!--    <style name="TextBody.Medium.HeadlineSmall" parent="TextBody.Medium">-->
+<!--        <item name="android:textSize">24sp</item>-->
+<!--    </style>-->
+
+<!--    <style name="TextBody.Medium.BodyLarge" parent="TextBody.Medium">-->
+<!--        <item name="android:textSize">16sp</item>-->
+<!--    </style>-->
+
+<!--    <style name="TextBody.Bold" parent="TextBody">-->
+<!--        <item name="fontFamily">@font/roboto_bold</item>-->
+<!--        <item name="android:textColor">@color/black</item>-->
+<!--    </style>-->
+
+<!--    <style name="Button" parent="Widget.Material3.Button">-->
+<!--        <item name="android:layout_width">match_parent</item>-->
+<!--        <item name="android:layout_height">wrap_content</item>-->
+<!--        <item name="android:textColor">@color/white</item>-->
+<!--        <item name="android:fontFamily">@font/roboto_medium</item>-->
+<!--        <item name="android:textAllCaps">false</item>-->
+<!--        <item name="cornerRadius">8dp</item>-->
+<!--        <item name="android:paddingTop">8dp</item>-->
+<!--        <item name="android:paddingBottom">8dp</item>-->
+<!--        <item name="android:backgroundTint">@color/green_40</item>-->
+<!--    </style>-->
+
 </resources>
