--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,36 +3,44 @@
     <style name="Base.Theme.QurbanIn" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="Theme.QurbanIn" parent="Base.Theme.QurbanIn" />
-
+    <style name="Theme.QurbanIn" parent="Base.Theme.QurbanIn"/>
 
     <style name="TextBody" parent="TextAppearance.AppCompat">
         <item name="fontFamily">@font/roboto_regular</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    <style name="TextBody.Light" parent="TextBody">
-        <item name="fontFamily">@font/roboto_light</item>
-        <item name="android:textColor">@color/black</item>
+    <style name="TextBody.BodyLarge" parent="TextBody">
+        <item name="android:textSize">16sp</item>
     </style>
-    <style name="TextBody.LightItalic" parent="TextBody">
-        <item name="fontFamily">@font/roboto_light_italic</item>
-        <item name="android:textColor">@color/black</item>
+
+    <style name="TextBody.Italic" parent="TextBody">
+        <item name="fontFamily">@font/roboto_italic</item>
     </style>
     <style name="TextBody.Medium" parent="TextBody">
         <item name="fontFamily">@font/roboto_medium</item>
-        <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="TextBody.Medium.HeadlineSmall" parent="TextBody.Medium">
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="TextBody.Medium.BodyLarge" parent="TextBody.Medium">
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="TextBody.Bold" parent="TextBody">
         <item name="fontFamily">@font/roboto_bold</item>
-        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Button" parent="Widget.Material3.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">8dp</item>
@@ -40,5 +48,8 @@
         <item name="android:paddingBottom">8dp</item>
         <item name="android:backgroundTint">@color/green_40</item>
     </style>
-
+    <style name="Button.Second" parent="Button">
+        <item name="android:textColor">@color/green_20</item>
+        <item name="android:backgroundTint">@color/green_100</item>
+    </style>
 </resources>
