--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.home.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="24dp">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/app_logo"
+            android:src="@drawable/ic_logo" />
+
+        <TextView
+            android:id="@+id/tv_greeting"
+            style="@style/TextBody.BodyLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="@string/dummy_user_greeting" />
+
+        <TextView
+            android:id="@+id/tv_user_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:fontFamily="@font/roboto_bold"
+            android:maxLines="2"
+            android:text="@string/dummy_user_location"
+            android:textColor="@color/green_20"
+            android:textSize="16sp" />
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view_organizer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/bg_custom_input"
+            android:inputType="text"
+            android:theme="@style/SearchViewStyle"
+            app:iconifiedByDefault="false"
+            app:queryHint="@string/search_organizer" />
+
+        <include
+            android:id="@+id/cv_search_organizer_location"
+            layout="@layout/item_dialog_search_organizer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="36dp" />
+
+        <TextView
+            style="@style/TextBody.Medium.BodyLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:text="@string/nearest_organizer" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_nearest_organizer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_nearest_organizer" />
+    </LinearLayout>
+</ScrollView>
