--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,15 +13,31 @@
         <item name="fontFamily">@font/roboto_regular</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
     <style name="TextBody.BodyLarge" parent="TextBody">
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextBody.BodySmall" parent="TextBody">
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="TextBody.BodyVerySmall" parent="TextBody">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">@color/grey_40</item>
     </style>
 
     <style name="TextBody.Italic" parent="TextBody">
         <item name="fontFamily">@font/roboto_italic</item>
     </style>
+    
     <style name="TextBody.Medium" parent="TextBody">
         <item name="fontFamily">@font/roboto_medium</item>
+    </style>
+    
+    <style name="TextBody.Medium.LabelMedium" parent="TextBody.Medium">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/green_40</item>
     </style>
 
     <style name="TextBody.Medium.HeadlineSmall" parent="TextBody.Medium">
@@ -48,8 +64,30 @@
         <item name="android:paddingBottom">8dp</item>
         <item name="android:backgroundTint">@color/green_40</item>
     </style>
+
     <style name="Button.Second" parent="Button">
         <item name="android:textColor">@color/green_20</item>
         <item name="android:backgroundTint">@color/green_100</item>
     </style>
+
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:backgroundTint">@color/green_60</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/green_20</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="RoundedImage">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+        <item name="color">@color/white</item>
+    </style>
+    
+    <style name="TextInputRounded">
+        <item name="boxCornerRadiusBottomEnd">8dp</item>
+        <item name="boxCornerRadiusBottomStart">8dp</item>
+        <item name="boxCornerRadiusTopEnd">8dp</item>
+        <item name="boxCornerRadiusTopStart">8dp</item>
+    </style>
+
 </resources>
