--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/green_100"
     android:clipChildren="false"
     android:clipToPadding="false"
     android:padding="24sp"
@@ -24,14 +25,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_logout"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/iv_description_logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_profile_picture"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
         android:layout_marginTop="48dp"
         android:src="@drawable/ic_profile"
         app:civ_border_width="4dp"
@@ -54,9 +56,9 @@
     <TextView
         android:id="@+id/tv_email"
         style="@style/TextBody"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:textSize="12sp"
+        android:textColor="@color/grey_20"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
@@ -65,9 +67,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_change_profile"
         style="@style/Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:text="@string/change_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,8 +76,7 @@
     <TextView
         android:id="@+id/tv_registered_label"
         style="@style/TextBody.Medium.BodyLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textColor="@color/green_40"
         android:layout_marginTop="36dp"
         android:text="@string/qurban_registered"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +86,7 @@
         android:id="@+id/rv_registered_qurban"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="12dp"
         tools:listitem="@layout/item_registered_qurban"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
