--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
 
     <style name="TextBody" parent="TextAppearance.AppCompat">
         <item name="fontFamily">@font/roboto_regular</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
@@ -34,10 +36,13 @@
     <style name="TextBody.Medium" parent="TextBody">
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
-    
+
+    <style name="TextBody.Medium.BodyVerySmall" parent="TextBody.Medium">
+        <item name="android:textSize">10sp</item>
+    </style>
+
     <style name="TextBody.Medium.LabelMedium" parent="TextBody.Medium">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/green_40</item>
     </style>
 
     <style name="TextBody.Medium.HeadlineSmall" parent="TextBody.Medium">
@@ -50,6 +55,13 @@
 
     <style name="TextBody.Bold" parent="TextBody">
         <item name="fontFamily">@font/roboto_bold</item>
+    </style>
+    <style name="TextBody.Bold.TitleLarge" parent="TextBody.Bold">
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TextBody.Bold.BodyLarge" parent="TextBody.Bold">
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Button" parent="Widget.Material3.Button">
@@ -71,10 +83,13 @@
     </style>
 
     <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:backgroundTint">@color/green_60</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:textColor">@color/green_20</item>
-        <item name="android:textSize">12sp</item>
+        <item name="tint">@color/green_20</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="RoundedImage">
