--- a/app/src/main/res/drawable/bg_custom_input.xml
+++ b/app/src/main/res/drawable/bg_custom_input.xml
@@ -11,7 +11,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="8dp"/>
             <solid android:color="@color/white"/>
-            <stroke android:width="1dp" android:color="@color/black"/>
+            <stroke android:width="1dp" android:color="@color/grey_20"/>
         </shape>
     </item>
 </selector>
