--- a/app/src/main/res/layout/fragment_list_qurban.xml
+++ b/app/src/main/res/layout/fragment_list_qurban.xml
@@ -21,10 +21,11 @@
 
     <TextView
         android:id="@+id/tv_history_label"
-        style="@style/TextBody.Medium.BodyLarge"
+        style="@style/TextBody.Bold.BodyLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:textColor="@color/green_20"
         android:text="@string/history"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
