--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,62 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.search.SearchFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:padding="24dp"
+        tools:context=".ui.search.SearchFragment">
 
         <ImageView
             android:id="@+id/btn_back"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
             android:src="@drawable/ic_arrow_bgcircle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_location_search"
-            android:layout_width="260dp"
-            android:layout_height="38dp"
+            style="@style/TextBody.Bold.BodyLarge"
+            android:layout_width="0dp"
             android:layout_marginTop="24dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="Berkah, Purwokerto Selatan Banyumas"
+            android:text="Berkoh, Purwokerto Selatan \nBanyumas"
             android:textColor="@color/green_20"
             android:textSize="16dp"
-            app:layout_constraintStart_toStartOf="@+id/btn_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_back" />
 
 
         <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView"
-            android:layout_width="312dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/bg_rounded_search"
-            android:backgroundTint="@color/green_60"
-            android:inputType="text"
-            app:layout_constraintStart_toStartOf="@+id/tv_location_search"
-            app:layout_constraintTop_toBottomOf="@+id/tv_location_search"
-            app:queryHint="Cari Penyelenggara " />
+            android:id="@+id/search_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/bg_custom_input"
+            style="@style/SearchViewStyle"
+            android:theme="@style/SearchViewStyle"
+            app:iconifiedByDefault="false"
+            app:queryHint="@string/search_organizer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_location_search" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="312dp"
-            android:layout_height="512dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/searchView"
-            app:layout_constraintStart_toStartOf="@+id/searchView"
-            app:layout_constraintTop_toBottomOf="@+id/searchView"
-            tools:listitem="@layout/item_search" />
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/search_view"
+        app:layout_constraintStart_toStartOf="@+id/search_view"
+        app:layout_constraintTop_toBottomOf="@+id/search_view"
+        tools:listitem="@layout/item_search"
+        />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</ScrollView>
