--- a/app/src/main/res/layout/item_registered_qurban.xml
+++ b/app/src/main/res/layout/item_registered_qurban.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="6dp"
+    android:layout_marginVertical="12dp"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="6dp">
+        android:padding="10dp">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_1"
@@ -24,36 +24,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.77" />
+            app:layout_constraintGuide_percent="0.66" />
 
         <TextView
             android:id="@+id/tv_headline_organizer"
-            style="@style/TextBody.Medium"
+            style="@style/TextBody.BodyLarge"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:maxLines="2"
+            app:layout_constraintEnd_toStartOf="@id/guideline_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/organizer_name" />
 
         <TextView
             android:id="@+id/tv_status_container"
-            style="@style/TextBody.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextBody.Medium.BodyVerySmall"
             android:background="@drawable/bg_rounded_8dp"
             android:backgroundTint="@color/purple"
-            android:text="@string/status_qurban"
+            tools:text="@string/status_qurban"
             android:textColor="@color/white"
-            android:textSize="12sp"
-            android:padding="4dp"
+            android:paddingVertical="4dp"
+            android:paddingHorizontal="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline_2"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_address"
-            style="@style/TextBody"
+            style="@style/TextBody.BodyVerySmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
@@ -66,9 +64,9 @@
 
         <TextView
             android:id="@+id/tv_registered_label"
-            style="@style/TextBody"
+            style="@style/TextBody.Medium.BodyVerySmall"
+            android:textColor="@color/grey_20"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="@string/registered"
             app:layout_constraintEnd_toStartOf="@+id/guideline_1"
@@ -77,9 +75,8 @@
 
         <TextView
             android:id="@+id/tv_name_stock"
-            style="@style/TextBody"
+            style="@style/TextBody.BodyVerySmall"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:textColor="@color/grey_40"
             app:layout_constraintEnd_toStartOf="@+id/guideline_1"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,36 +85,42 @@
 
         <TextView
             android:id="@+id/tv_execution_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextBody.Medium.BodyVerySmall"
+            android:textColor="@color/grey_20"
+            android:layout_width="0dp"
             android:layout_marginTop="12dp"
             android:text="@string/execution"
+            app:layout_constraintEnd_toStartOf="@id/guideline_2"
             app:layout_constraintStart_toStartOf="@+id/guideline_1"
             app:layout_constraintTop_toBottomOf="@+id/tv_address" />
 
         <TextView
             android:id="@+id/tv_execution_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextBody.BodyVerySmall"
+            android:layout_width="0dp"
             android:textColor="@color/grey_40"
+            app:layout_constraintEnd_toStartOf="@id/guideline_2"
             app:layout_constraintStart_toStartOf="@+id/guideline_1"
             app:layout_constraintTop_toBottomOf="@+id/tv_execution_label"
             tools:text="@string/execution" />
 
         <TextView
             android:id="@+id/tv_deliver_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextBody.Medium.BodyVerySmall"
+            android:textColor="@color/grey_20"
+            android:layout_width="0dp"
             android:layout_marginTop="12dp"
             android:text="@string/deliver"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_2"
             app:layout_constraintTop_toBottomOf="@+id/tv_address" />
 
         <TextView
             android:id="@+id/tv_deliver_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextBody.BodyVerySmall"
+            android:layout_width="0dp"
             android:textColor="@color/grey_40"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_2"
             app:layout_constraintTop_toBottomOf="@+id/tv_deliver_label"
             tools:text="@string/deliver" />
