--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -2,211 +2,139 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginVertical="8dp"
     android:layout_width="match_parent"
-    android:layout_height="140dp">
-    
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="8dp"
+    >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:padding="10dp">
 
         <ImageView
-            android:id="@+id/img_mosque"
-            android:layout_width="115dp"
-            android:layout_height="115dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:src="@drawable/dummy_mesjid1"
+            android:id="@+id/iv_mosque"
+            android:layout_width="106dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_rounded_8dp"
+            android:clipToOutline="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/dummy_mosque"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:targetApi="s" />
 
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/qurban"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/img_mosque"
-            app:layout_constraintTop_toTopOf="@+id/img_mosque" />
+            android:id="@+id/tv_event"
+            style="@style/TextBody.Medium.LabelMedium"
+            android:layout_width="0dp"
+            android:layout_marginStart="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iv_mosque"
+            app:layout_constraintTop_toTopOf="@+id/iv_mosque"
+            tools:text="Masjid" />
 
         <TextView
-            android:id="@+id/tv_mosque_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/masjid_al_ikhlas"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toTopOf="@+id/textView3" />
-
-        <TextView
-            android:id="@+id/tv_location_card_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/berkah_purwokerto_selatan"
+            android:id="@+id/tv_location"
+            style="@style/TextBody.BodyVerySmall"
+            android:layout_width="0dp"
             android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@+id/tv_event"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_event"
+            tools:text="@string/dummy_user_location" />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/tv_label_event_date"
+            style="@style/TextBody.Medium.BodyVerySmall"
+            android:textColor="@color/grey_20"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/pelaksanaan"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/tv_location_card_search"
-            app:layout_constraintTop_toBottomOf="@+id/tv_location_card_search" />
+            android:text="@string/label_event_date"
+            app:layout_constraintStart_toStartOf="@+id/tv_location"
+            app:layout_constraintTop_toBottomOf="@id/tv_location" />
 
         <TextView
             android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/_28_juni_2024"
+            style="@style/TextBody.BodyVerySmall"
             android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintStart_toStartOf="@+id/tv_label_event_date"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_event_date"
+            tools:text="28 Juni 2024" />
 
         <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/pengambilan"
-            android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toTopOf="@+id/textView4" />
+            android:id="@+id/tv_label_event_time"
+            style="@style/TextBody.Medium.BodyVerySmall"
+            android:textColor="@color/grey_20"
+            android:text="@string/label_event_time_take"
+            app:layout_constraintStart_toEndOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/tv_label_event_date" />
 
         <TextView
             android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/_13_00"
+            style="@style/TextBody.BodyVerySmall"
             android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintStart_toStartOf="@+id/tv_label_event_time"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_event_time"
+            tools:text="13:00" />
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/ketersediaan"
-            android:textSize="12sp"
+            android:id="@+id/tv_label_stock"
+            style="@style/TextBody.Medium.BodyVerySmall"
+            android:layout_width="0dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/label_event_stock"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_date"
             app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
         <ImageView
-            android:id="@+id/img_goat"
+            android:id="@+id/iv_ic_goat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:src="@drawable/ic_goat"
-            app:layout_constraintStart_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintStart_toStartOf="@+id/tv_label_stock"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_stock" />
 
         <TextView
             android:id="@+id/tv_goat_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextBody.BodyVerySmall"
             android:layout_marginStart="4dp"
-            android:fontFamily="@font/roboto_medium"
             android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            android:text="@string/dummy5"
-            app:layout_constraintBottom_toBottomOf="@+id/img_goat"
-            app:layout_constraintStart_toEndOf="@+id/img_goat" />
-
-        <TextView
-            android:id="@+id/tv_slash1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/slash"
-            android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_goat_value"
-            app:layout_constraintStart_toEndOf="@+id/tv_goat_value" />
-
-        <TextView
-            android:id="@+id/tv_goat_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="12"
-            android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_slash1"
-            app:layout_constraintStart_toEndOf="@+id/tv_slash1"
-            app:layout_constraintTop_toTopOf="@+id/tv_goat_value" />
+            app:layout_constraintTop_toTopOf="@id/iv_ic_goat"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_ic_goat"
+            app:layout_constraintStart_toEndOf="@+id/iv_ic_goat"
+            tools:text="5/10" />
 
 
         <ImageView
-            android:id="@+id/img_cow"
+            android:id="@+id/iv_ic_cow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="70dp"
             android:src="@drawable/ic_cow"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_slash1"
-            app:layout_constraintStart_toEndOf="@+id/tv_slash1" />
+            app:layout_constraintStart_toEndOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@id/tv_label_stock" />
 
         <TextView
             android:id="@+id/tv_cow_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/lima"
-            android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/img_cow"
-            app:layout_constraintStart_toEndOf="@+id/img_cow"
-            app:layout_constraintTop_toTopOf="@+id/img_cow" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextBody.BodyVerySmall"
             android:layout_marginStart="4dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/slash"
             android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_cow_value"
-            app:layout_constraintStart_toEndOf="@+id/tv_cow_value" />
+            tools:text="5/10"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_ic_cow"
+            app:layout_constraintStart_toEndOf="@+id/iv_ic_cow"
+            app:layout_constraintTop_toTopOf="@+id/iv_ic_cow" />
 
-        <TextView
-            android:id="@+id/tv_cow_total"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/dummy10"
-            android:textColor="@color/grey_40"
-            android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/textView7"
-            app:layout_constraintTop_toTopOf="@+id/textView7" />
-
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.6" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
