Add Bottom Navigation

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,8 +53,7 @@
             layout="@layout/item_dialog_search_organizer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="36dp" />
+            android:layout_marginVertical="24dp" />
 
         <TextView
             style="@style/TextBody.Medium.BodyLarge"
