--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/homeContainerFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -31,8 +31,8 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_loginFragment_to_homeContainerFragment"
+            app:destination="@id/homeContainerFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -78,4 +78,9 @@
         android:name="com.dicoding.qurbanin.ui.detail.StatusQurbanFragment"
         android:label="fragment_status_qurban"
         tools:layout="@layout/fragment_status_qurban" />
+    <fragment
+        android:id="@+id/homeContainerFragment"
+        android:name="com.dicoding.qurbanin.ui.home.HomeContainerFragment"
+        android:label="fragment_home_container"
+        tools:layout="@layout/fragment_home_container" />
 </navigation>
