--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,12 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.QurbanIn" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorOnSecondaryContainer">@color/green_20</item>
+        <item name="colorSecondaryContainer">@color/green_80</item>
+        <item name="colorOnSurfaceVariant">@color/green_80</item>
+
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:textColorPrimary">?android:textColorTertiary</item>
         <item name="android:windowLightStatusBar">false</item>
@@ -10,11 +14,12 @@
 
     <style name="Theme.QurbanIn" parent="Base.Theme.QurbanIn"/>
 
-<!--    <style name="TextBody" parent="Theme.QurbanIn">-->
-<!--        <item name="fontFamily">@font/roboto_regular</item>-->
-<!--        <item name="android:textColor">@color/black</item>-->
-<!--        <item name="android:textSize">14sp</item>-->
-<!--    </style>-->
+    <style name="TextBody" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/roboto_regular</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 <!--    <style name="TextBody.BodyLarge" parent="TextBody">-->
 <!--        <item name="android:textSize">16sp</item>-->
 <!--    </style>-->
