--- a/app/src/main/res/layout/item_stock_qurban.xml
+++ b/app/src/main/res/layout/item_stock_qurban.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cl_container"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
     app:cardCornerRadius="8dp">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:padding="12dp">
 
         <TextView
@@ -20,7 +20,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             style="@style/TextBody.Medium.BodyLarge"
-            android:text="Sapi-Grup1"/>
+            tools:text="Sapi-Grup1"/>
 
         <TextView
             android:id="@+id/tv_note_pricing"
@@ -36,7 +36,7 @@
             android:id="@+id/btn_icon_dropdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_up"
+            android:src="@drawable/item_selector_dropdown"
             android:background="?attr/selectableItemBackgroundBorderless"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_name_stock"
@@ -49,6 +49,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             app:layout_constraintTop_toBottomOf="@id/tv_note_pricing"
             android:layout_marginTop="12dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
