--- a/app/src/main/res/layout/item_dialog_info.xml
+++ b/app/src/main/res/layout/item_dialog_info.xml
@@ -38,8 +38,9 @@
 
     <com.google.android.material.button.MaterialButton
         style="@style/Button"
+        android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        tools:text="Daftar Qurban"/>
+        android:text="@string/register_qurban"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
