--- a/app/src/main/res/layout/item_dialog_info.xml
+++ b/app/src/main/res/layout/item_dialog_info.xml
@@ -13,7 +13,9 @@
         android:id="@+id/iv_illus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/illus_farm"/>
+        android:src="@drawable/illus_farm"
+        android:contentDescription="Farm"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_title"
