Add color resource (blue) and new field (StatusEvent) to data class.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="purple">#9873D5</color>
     <color name="yellow">#FED74B</color>
     <color name="red">#FF3C3C</color>
+    <color name="blue">#4BB3FE</color>
 </resources>
